tests/rosetta/out/Smalltalk/a+b.out
Object: nil error: did not understand #value
MessageNotUnderstood(Exception)>>signal (ExcHandling.st:254)
UndefinedObject(Object)>>doesNotUnderstand: #value (SysExcept.st:1448)
optimized [] in UndefinedObject>>executeStatements (/tmp/a+b.st:4)
UndefinedObject>>executeStatements (/tmp/a+b.st:7)
