tests/rosetta/out/Smalltalk/a+b.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| main a b |
main := [ a := int value: input value.
b := int value: input value.
Transcript show: ((a + b)) printString; cr. ].
main value.
